tests/arrays/arrays_error.sld
func main() {
    let a = [1, 2, 3];
    print(a[-1]);
    a[-1] = 0;
    print(a);

    let underspecified = [];
}
